--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   font-family:'VT323', monospace;
   font-size: 18px;
   line-height: 1.5;
-  color: #00ff99;
+  color: #406154;
   text-shadow: 0 0 4px #00ff99;
   overflow: hidden;
   pointer-events: none;
